--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 .mainShell{
-    background-color: rgb(206, 205, 205);
+    /*background-color: rgb(206, 205, 205);*/
+    background: url("/assets/images/cubes.png");
     min-height: 700px;
 
 };
