--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -1,1 +1,37 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body, html {
+  height: 100%;
+}
+
+body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 0;
+}
+
+body #mainShell {
+  background-color: #A6A3A1;
+  width: 100%;
+  height: auto;
+  position: absolute;
+  z-index: -1;
+}
+
+#headBar {
+  z-index: 1;
+  position: relative;
+}
+
+#gif {
+  z-index: 1;
+  position: relative;
+}
+
+#menu {
+  z-index: 1;
+  position: relative;
+}
+
+#cards {
+  z-index: 1;
+  position: relative;
+}
+/*# sourceMappingURL=style.css.map */
