--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
@@ -43,20 +43,31 @@ body{
 #cards{
     z-index: 1;
     position: relative;
+    width: 70%;
 }
-@import "bootstrap";
+
+img{
+    
+    width: 80%;
+}
+
+
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins/_breakpoints";
 
 .card-columns {
-  @include media-breakpoint-only(xl) {
-    column-count: 3;
+   @include media-breakpoint-only(xl) {
+     column-count: 3;
   }
   @include media-breakpoint-only(lg) {
     column-count: 3;
   }
   @include media-breakpoint-only(md) {
-    column-count: 2;
+    column-count: 1;
   }
   @include media-breakpoint-only(sm) {
     column-count: 1;
   }
+
 }
