Added optional gif border

--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -23,6 +23,12 @@ body #mainShell {
 #gif {
   z-index: 1;
   position: relative;
+  background-color: #BF2424;
+  width: 60%;
+  border-style: dashed;
+  border-width: 5px;
+  border-color: #F2F2F2;
+  border-radius: 50px;
 }
 
 #menu {
