Major styling box float issues fixed

--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
@@ -17,7 +17,7 @@ body{
     
 
     #mainShell{
-        
+        position: absolute;
         background-color: map-get($mycolors, main);
         width: 100%;
         height: auto;
