baclkground size fixed

--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
@@ -20,7 +20,7 @@ body{
         position: absolute;
         background-color: map-get($mycolors, main);
         width: 100%;
-        height: auto;
+        min-height: 650px;
         position: absolute;
         z-index: -1;
     }
