--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -5,15 +5,10 @@ body, html {
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin: 0;
+  background: url("/assets/images/game-wp.jpg");
 }
 
-body #mainShell {
-  background-color: #A6A3A1;
-  width: 100%;
-  height: auto;
-  position: absolute;
-  z-index: -1;
-}
+
 
 #headBar {
   z-index: 1;
