Moved break point js file to fix error background now sass

--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -8,7 +8,14 @@ body {
   background: url("/assets/images/game-wp.jpg");
 }
 
-
+body #mainShell {
+  position: absolute;
+  background-color: #A6A3A1;
+  width: 100%;
+  min-height: 500px;
+  position: absolute;
+  z-index: -1;
+}
 
 #headBar {
   z-index: 1;
