--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -5,7 +5,7 @@ body, html {
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin: 0;
-  background: url("../../../../images/controller-wp.jpg");
+  background: url("/assets/images/game-wp.jpg");
 }
 
 body #mainShell {
@@ -31,6 +31,10 @@ body #mainShell {
   border-width: 5px;
   border-color: #F2F2F2;
   border-radius: 50px;
+}
+
+#gif #gifs-appear-here img {
+  width: 50%;
 }
 
 #menu {
