Background bug fix moved to the sass page

--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -33,6 +33,10 @@ body #mainShell {
   border-radius: 50px;
 }
 
+#gif #gifs-appear-here img {
+  width: 50%;
+}
+
 #menu {
   z-index: 1;
   position: relative;
