--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.scss
@@ -14,7 +14,7 @@ body, html {
 body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
-    background: url("/assets/images/game-wp.jpg");
+    background: url("../../../../images/controller-wp.jpg");
     
 
     #mainShell{
