--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -5,7 +5,7 @@ body, html {
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin: 0;
-  background: url("/assets/images/controller-wp.jpg");
+  background: url("../../../../images/controller-wp.jpg");
 }
 
 body #mainShell {
@@ -54,8 +54,8 @@ img {
 
 @media (min-width: 1200px) {
   .card-columns {
-    -webkit-column-count: 3;
-            column-count: 3;
+    -webkit-column-count: 1;
+            column-count: 1;
   }
 }
 
@@ -68,8 +68,8 @@ img {
 
 @media (min-width: 768px) and (max-width: 991.98px) {
   .card-columns {
-    -webkit-column-count: 1;
-            column-count: 1;
+    -webkit-column-count: 2;
+            column-count: 2;
   }
 }
 
