--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -33,6 +33,12 @@ body #mainShell {
   border-radius: 50px;
 }
 
+#gif .card-deck, #gif .card-wrapper {
+  margin: auto;
+  padding: auto;
+  width: 100%;
+}
+
 #gif #gifs-appear-here img {
   width: 50%;
 }
@@ -52,10 +58,16 @@ img {
   width: 80%;
 }
 
+@media (min-width: 576px) {
+  .btn-group {
+    display: block;
+  }
+}
+
 @media (min-width: 1200px) {
   .card-columns {
-    -webkit-column-count: 1;
-            column-count: 1;
+    -webkit-column-count: 2;
+            column-count: 2;
   }
 }
 
